--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "intl": "^1.2.5",
     "jquery": "^3.6.0",
     "json": "^11.0.0",
+    "json-server": "^0.17.0",
     "node": "^18.7.0",
     "rxjs": "~7.5.0",
     "server": "^1.0.37",
